--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,14 @@
 steps:
-- name: 'gcr.io/cloud-builders/npm:node-12.16.2'
+-name: node:12.16.2
+  entrypoint: npm
   args: ['install']
 
-- name: 'gcr.io/cloud-builders/npm:node-12.16.2'
+-name: node:12.16.2
+  entrypoint: npm
   args: ['run', 'test']
 
-- name: 'gcr.io/cloud-builders/npm:node-12.16.2'
+-name: node:12.16.2
+  entrypoint: npm
   args: ['run', 'build']
 
 - name: 'gcr.io/$PROJECT_ID/firebase'
