--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
--name: node:12.16.2
+- name: node:12.16.2
   entrypoint: npm
   args: ['install']
 
--name: node:12.16.2
+- name: node:12.16.2
   entrypoint: npm
-  args: ['run', 'test']
+  args: ['test']
 
--name: node:12.16.2
+- name: node:12.16.2
   entrypoint: npm
   args: ['run', 'build']
 
